# PlainIrbis

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  PlainIrbis.2008.sln  PlainIrbis.sln  README.md  appveyor.yml  build.cmd  configure.ac  meson.build  ow_dos4g.cmd  ow_nt.cmd  runtests.cmd  runtests.sh
.github/workflows/: cmake.yml
_make/: common
apps/: CMakeLists.txt  Makefile  meson.build
apps/capsoff/: CMakeLists.txt
apps/capsoff/src/: main.c
apps/hello/: CMakeLists.txt  Hello.2008.vcproj  Makefile  meson.build  ow_16bit.bat  ow_16bit.mak  ow_dos4g.mak
apps/hello/src/: main.c
data/: README.md
docs/: Naming.md  chapter1.md  chapter2.md  chapter3.md  index.md
include/magna/: config.h.in  core.h  direct.h  fields.h  irbis.h  tester.h
include/magna/config/: win32.h
libs/: CMakeLists.txt  Makefile  Makefile.am  meson.build
libs/include/: version.h  warnpop.h  warnpush.h
libs/irbis/: CMakeLists.txt  Irbis.2008.vcproj  Irbis.vcxproj  Makefile  Makefile.am  configure.ac  meson.build  ow_16bit.mak  ow_dos4g.mak
libs/irbis/src/: address.c  alphatab.c  author.c  bookinfo.c  codes.c  collecti.c  connect.c  connection.c  dbinfo.c  dll.c  ean.c  error.c  exemplar.c  field.c  field203.c  format.c  fst.c  gbl.c  guard.c  ilf.c  impex.c  ini.c  iri.c  isbn.c  isbninfo.c  iso2709.c  magazine.c  menu.c  mst.c  opt.c  par.c  phantom.c  procinfo.c  query.c  rawrecor.c  reader.c  record.c  registr.c  resource.c  response.c  (+18 more)
libs/magna/: CMakeLists.txt  Magna.2008.vcproj  Magna.vcxproj  Makefile  Makefile.am  configure.ac  meson.build  ow_16bit.mak  ow_dos4g.bat  ow_dos4g.mak
libs/magna/src/: array.c  beep.c  buffer.c  chain.c  chunked.c  cp1251.c  cp866.c  date.c  delphi.c  dump.c  encoding.c  enumertr.c  error.c  fastbuf.c  file.c  format.c  handle.c  intarray.c  io.c  keyboard.c  koi8r.c  list.c  logging.c  magna.c  map.c  mapfile.c  memory.c  navigatr.c  number.c  object.c  path.c  process.c  retry.c  screen.c  sleep.c  span.c  spanarry.c  stream.c  string.c  tcp4.c  (+7 more)
tests/: CMakeLists.txt  Makefile  meson.build
tests/offline/: CMakeLists.txt  Makefile  Offline.2008.vcproj  meson.build
tests/offline/include/: offline.h
tests/offline/src/: array.c  buffer.c  buffer.cpp  chain.c  chunked.c  connect.c  cp1251.c  cp866.c  ean.c  ean.cpp  encoding.c  enumertr.c  field.c  file.c  intarray.c  io.c  koi8r.c  list.c  main.c  main.cpp  memory.c  menu.c  navigatr.c  number.c  path.c  retry.c  span.c  span.cpp  spanarry.c  stream.c  subfield.c  upc.c  utils.c  varray.c  vector.c
tests/tester/: CMakeLists.txt
tests/tester/src/: main.c
utils/: README.md
