# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([plain-irbis], [0.1])
AC_CONFIG_SRCDIR([apps/hello/src/main.c])
AC_CONFIG_HEADERS([include/magna/config.h])
AM_INIT_AUTOMAKE

# Checks for programs.

AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_LONG_LONG_INT
AC_CHECK_TYPES([ptrdiff_t])
AC_CHECK_SIZEOF([size_t])

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
